Add downloader view
